fix: added consistent spacing for text and cards

--- a/project-02/css/style.css
+++ b/project-02/css/style.css
@@ -67,7 +67,7 @@ h4 {
 }
 
 ul {
-    margin-bottom: var(--spacing-small);
+    margin-bottom: var(--spacing-medium);
     margin-left: var(--spacing-large);
     
 }
@@ -76,10 +76,11 @@ ul {
     background-color: var(--secondary-color);
     border: 1px solid black;
     padding: 4px;
+    margin-bottom: var(--spacing-large);
 }
 
 p {
-    margin-bottom: var(--spacing-medium);
+    margin-bottom: var(--spacing-large);
     background-color: var(--secondary-color);
     border: 1px solid black;
     padding: 4px;
@@ -142,7 +143,9 @@ p {
     font-weight: var(--spacing-small);
     line-height: var(--spacing-large);
     flex-grow: 1; flex-shrink: 1; flex-basis: 300px;
-    margin: var(--spacing-large);
+    margin-right: var(--spacing-large);
+    margin-left: var(--spacing-large);
+    margin-bottom: var(--spacing-large);
     transition: color 0.3s ease, background-color 0.3s ease;
 
 }
@@ -171,7 +174,9 @@ p {
     padding: 19px;
     line-height: var(--spacing-large);
     flex-grow: 1; flex-shrink: 1; flex-basis: 300px;
-    margin: var(--spacing-medium);
+    margin-right: var(--spacing-large);
+    margin-left: var(--spacing-large);
+    margin-bottom: var(--spacing-large);
     transition: color 0.3s ease, background-color 0.3s ease;
     width: 4px;
 }
